@@ -1,3 +1,8 @@
+2012-11-28  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52161
+	* coarray/sync_3.f90: New.
+
 2012-11-28  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/pr55458.c: Require ia32 target instead of ilp32.
